--- a/index.html
+++ b/index.html
@@ -5,13 +5,6 @@
     <title>API</title>
   </head>
   <body>
-    <p id="jsonData"></p>
-    <script>
-      fetch('https://arealiferp.fr/api/website.php')
-      .then(function(response) {
-        return document.getElementById("jsonData").innerHTML = response;
-      })
-    </script>
-    
+    <a ping="https://arealiferp.fr/">
   </body>
 </html>
